[build-system]
requires = [
    "wheel",
    "setuptools",
    "cython>=0.21.0",
    "numpy>=v1.20.0, <=1.26.4",
    "scipy",
]

[tool.pysen]
version = "0.10"

[tool.pysen.lint]
enable_black = true
enable_flake8 = true
enable_isort = true
enable_mypy = false
mypy_preset = "entry"
line_length = 88
py_version = "py38"

mypy_ignore_packages=["nnmnkwii.paramgen._bandmat.*", "nnmnkwii.frontend.*"]


[[tool.pysen.lint.mypy_targets]]
paths = ["nnmnkwii", "tests"]
